CR-2002-02-20-0: Testsuite: cleanup of qmod reschedule test
                 Issue:     #118

EB-2002-02-20-0: Enhancem.: need means for limiting total number of 
                            jobs in a cluster 
                 Issue:     #136
                 Cleanup:   utilib; added ADOC comments

EB-2002-02-19-1: Cleanup:   Moved/deleted some functiones (part 2/2)
                            Added ADOC comments
                 Issue:     #152

EB-2002-02-19-0: Cleanup:   Moved/deleted some functiones (part 1/2)
                 Issue:     #152 

EB-2002-02-18-1: Cleanup:   Integarte common/job.c functions into 
                            libs/gdi/sge_job_jatask.c
                 Issue:     #142

SD-2002-02-18-2: Bugfix:    - Set resource limits after setting the OS
                              job id in builtin_starter.c so that job
                              resource limits will work on the SX-6.

CR-2002-02-18-1: Testsuite: added new check_function in qdel test
                         

EB-2002-02-18-0: Bugfix:    Attempt to unlink directory + bogus error message
                            - finished jobs have no task instanced
                              => do not create a directory
                              => put whole zombie job into one file
                                 $SGE_ROOT/default/spool/qmaster/zombies/ ...
                                    ... xx/yyyy/zzzz (zzzz is a file)
                 Issue:     #149

CR-2002-02-18-0: Testsuite: - alleviate testsuite setup

AS-2002-02-13-3: CVS:       Created V53_beta2_sx6_TAG and V53_beta2_sx6_BRANCH
------------------------------------------------------------------------------

CR-2002-02-15-0: Testsuite: - compile option: handle eof and response timeout 

CR-2002-02-14-0: Testsuite: - Bugfix: error on updating defaults file version
                            - is_job_running() now first will get the current
                              job state and then evtl. make a sleep (timing)  